--- a/Youtube API_practice.ipynb
+++ b/Youtube API_practice.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = 'AIzaSyBQrc1807LcvHm24B2-N84xK5Wle7obubw'"
+    "API_KEY =　'Your APIKEY'"
    ]
   },
   {
